welcome.lessons.welcome.instructions.Instructions.scala.code
baisseBrosse();
avance();
avance();
droite();
avance();
avance();
droite();
avance();
avance();
droite();
avance();
droite();
levebrosse();
avance();
